--- a/main/admin_page/templates/admin.html
+++ b/main/admin_page/templates/admin.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Page</title>
-</head>
-<body>
-    <h1>Admin page</h1>
-    <p>Welcome to the admin page.</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Admin Dashboard{% endblock %}
+
+{% block content %}
+
+<h1>Admin page</h1>
+<p>Welcome to the admin page.</p>
+
+{% endblock %}
