--- a/main/item_page/templates/item.html
+++ b/main/item_page/templates/item.html
@@ -1,12 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Item Page</title>
-</head>
-<body>
-    <h1>item page</h1>
-    <p>Welcome to the item page.</p>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}Items{% endblock %}
+
+{% block content %}
+
+<h1>Item page</h1>
+<p>Welcome to the item page.</p>
+
+{% endblock %}
