feat: added basic auction creation system, must be extended with error handling and image uploads

--- a/main/page_auth/templates/login.html
+++ b/main/page_auth/templates/login.html
@@ -28,7 +28,7 @@
     </div>
     <!-- Submit -->
     <div class="form-group">
-      {{ form.submit(class_="form-control required-field", placeholder="Login", id_="submit-login") }}
+      {{ form.submit(class_="form-control required-field btn btn-primary", placeholder="Login", id_="submit-login") }}
     </div>
     <p class="text-end option-text">New here?&nbsp; <a href="{{ url_for('auth_page.register') }}">Register</a></p>
   </form>
