--- a/main/page_auth/templates/register.html
+++ b/main/page_auth/templates/register.html
@@ -48,7 +48,7 @@
     </div>
     <!-- Submit -->
     <div class="form-group">
-      {{ form.submit(class_="form-control required-field", placeholder="Register", id_="submit-register") }}
+      {{ form.submit(class_="form-control required-field btn btn-primary", placeholder="Register", id_="submit-register") }}
     </div>
     <p class="text-end option-text">Already have an account?&nbsp; <a href="{{ url_for('auth_page.login') }}">Login</a></p>
 </div>
