--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -14,6 +14,52 @@
   <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
 </head>
 <body>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg bg-body-tertiary">
+    <div class="container-fluid">
+      <!-- Home Button -->
+      <div class="me-auto">
+        <div class="nav-item">
+          <a class="btn btn-outline-primary" href="{{ url_for('home_page.index') }}" title="Home">
+            Home
+          </a>
+        </div>
+      </div>
+      {% if current_user.is_authenticated %}
+      <div class="ms-auto d-flex">
+        <div class="nav-item me-2">
+          <a class="btn btn-primary" href="{{ url_for('create_page.index' )}}" title="Create Auction">
+            Create Auction
+          </a>
+        </div>
+        <div class="nav-item me-2">
+          <a class="btn btn-secondary" href="{{ url_for('dashboard_page.index') }}" title="Dashboard">
+            Dashboard
+          </a>
+        </div>
+        <div class="nav-item">
+          <a class="btn btn-danger" href="{{ url_for('auth_page.logout') }}" title="Logout">
+            Logout
+          </a>
+        </div>
+      </div>
+      {% else %}
+      <!-- Registration Links -->
+      <div class="ms-auto d-flex">
+        <div class="nav-item me-2">
+          <a class="btn btn-primary" href="{{ url_for('auth_page.login') }}" title="Login">
+            Login
+          </a>
+        </div>
+        <div class="nav-item">
+          <a class="btn btn-secondary" href="{{ url_for('auth_page.register') }}" title="Register">
+            Register
+          </a>
+        </div>
+      </div>
+      {% endif %}
+    </div>
+  </nav>
   <!-- Flashes -->
   <div class="container-fluid">
     <div class="row justify-content-center">
@@ -31,39 +77,6 @@
       </div>
     </div>
   </div>
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-body-tertiary">
-    <div class="container-fluid">
-      {% if current_user.is_authenticated %}
-      <div class="ms-auto d-flex">
-        <div class="nav-item me-2">
-          <a class="btn btn-primary" href="#" title="Create Auction">
-            Create Auction
-          </a>
-        </div>
-          <div class="nav-item">
-            <a class="btn btn-secondary" href="{{ url_for('auth_page.logout') }}" title="Logout">
-              Logout
-            </a>
-          </div>
-        </div>
-      {% else %}
-      <!-- Registration Links -->
-      <div class="ms-auto d-flex">
-        <div class="nav-item me-2">
-          <a class="btn btn-primary" href="{{ url_for('auth_page.login') }}" title="Login">
-            Login
-          </a>
-        </div>
-          <div class="nav-item">
-            <a class="btn btn-secondary" href="{{ url_for('auth_page.register') }}" title="Register">
-              Register
-            </a>
-          </div>
-        </div>
-      {% endif %}
-    </div>
-  </nav>
   <div class="container-fluid">
     {% block content %}{% endblock %}
   </div>
