--- a/main/page_auth/templates/login.html
+++ b/main/page_auth/templates/login.html
@@ -26,11 +26,12 @@
       <div class="alert alert-danger" role="alert">{{ error }}</div>
       {% endfor %}
     </div>
-    <!-- Submit -->
-    <div class="form-group">
-      {{ form.submit(class_="form-control required-field btn btn-primary", placeholder="Login", id_="submit-login") }}
+    <!-- Submit Buttons -->
+    <div class="d-flex gap-2 mt-3">
+      {{ form.submit(class_="btn btn-primary", placeholder="Login", id_="submit-login") }}
+      <a class="btn btn-danger" href="{{ url_for('auth_page.oauth2_authorise', provider='google') }}">Login with Google</a>
     </div>
-    <p class="text-end option-text">New here?&nbsp; <a href="{{ url_for('auth_page.register') }}">Register</a></p>
+    <p class="text-end option-text mt-3">New here?&nbsp; <a href="{{ url_for('auth_page.register') }}">Register</a></p>
   </form>
 </div>
 
