--- a/main/page_create/templates/create.html
+++ b/main/page_create/templates/create.html
@@ -6,6 +6,7 @@
 
 <!-- Heading -->
 <h1 class="mt-5 mb-4 text-center">Create Auction</h1>
+<meta name="auth-fee" content="{{ authentication_fee }}">
 
 <div id="auction-form">
   <form action="#" method="POST" name="CreateAuction" id="create-auction-form" enctype="multipart/form-data">
@@ -59,6 +60,15 @@
       <div class="alert alert-danger" role="alert">{{ error }}</div>
       {% endfor %}
     </div>
+    <!-- Authenticate Item -->
+    <div class="form-group">
+      <label for="authenticate-item" class="form-label">Authenticate Item</label>
+      {{ form.authenticate_item(class_="form-check-input", id_="authenticate-item") }}
+      {% for error in form.authenticate_item.errors %}
+      <div class="alert alert-danger" role="alert">{{ error }}</div>
+      {% endfor %}
+    </div>
+    <p class="text-danger">The default platform fee is currently {{ base_fee }}% of the final sale price</p>
     <!-- Submit -->
     <div class="form-group">
       {{ form.submit(class_="form-control required-field btn btn-primary", id_="submit-auction") }}
@@ -67,5 +77,6 @@
 </div>
 
 <!-- Scripts -->
+<script src="{{ url_for('static', filename='js/createAuction.js') }}"></script>
 
 {% endblock %}
