--- a/main/page_create/templates/create.html
+++ b/main/page_create/templates/create.html
@@ -68,7 +68,7 @@
       <div class="alert alert-danger" role="alert">{{ error }}</div>
       {% endfor %}
     </div>
-    <p class="text-danger">The default platform fee is currently {{ base_fee }}% of the final sale price</p>
+    <p class="text-danger">The base platform fee is currently {{ base_fee }}% of the final sale price</p>
     <!-- Submit -->
     <div class="form-group">
       {{ form.submit(class_="form-control required-field btn btn-primary", id_="submit-auction") }}
