--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -29,6 +29,22 @@
           <span class="badge {% if item.locked %}bg-danger{% else %}bg-success{% endif %} p-2">
             {{ "Locked" if item.locked else "Open" }}
           </span>
+          {% if is_allowed %}
+          <a href="{{ url_for('authenticate_item_page.index', url=item.url) }}"
+            title="View authentication request"
+            class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning
+            {% elif item.authentication_requests[0].status == 2 %}bg-success
+            {% else %}bg-danger{% endif %} p-2"
+          >
+            {% if item.authentication_requests[0].status == 1 %}
+              Authentication Pending
+            {% elif item.authentication_requests[0].status == 2 %}
+              Authenticated
+            {% else %}
+              Authentication Declined
+            {% endif %}
+          </a>
+          {% else %}
           <span class="badge {% if authentication == 1 %}bg-warning
             {% elif item.authentication == 2 %}bg-success
             {% elif item.authentication == 3 %}bg-danger
@@ -44,6 +60,7 @@
               Not Authenticated
             {% endif %}
           </span>
+          {% endif %}
         </div>
       </div>
       <!-- Price -->
