--- a/main/page_home/templates/home.html
+++ b/main/page_home/templates/home.html
@@ -27,19 +27,19 @@
           </div>
           <div class="auction-info">
             <div class="badges">
-              <div class="badge {% if item.authentication_status == 1 %}bg-secondary
-              {% elif item.authentication_status == 2 %}bg-warning
-              {% elif item.authentication_status == 3 %}bg-success
-              {% else %}bg-danger{% endif %} p-2"
+              <div class="badge {% if not item.authentication_requests %}bg-secondary
+              {% elif item.authentication_requests[0].status == 2 %}bg-sucesss
+              {% elif item.authentication_requests[0].status == 3 %}bg-danger
+              {% else %}bg-warning{% endif %} p-2"
               >
-              {% if item.authentication_status == 1 %}
+              {% if not item.authentication_requests %}
                   Not Authenticated
-              {% elif item.authentication_status == 2 %}
-                  Authentication Pending
-              {% elif item.authentication_status == 3 %}
+              {% elif item.authentication_requests[0].status == 2 %}
                   Authenticated
+              {% elif item.authentication_requests[0].status == 3 %}
+                  Declined
               {% else %}
-                  Authentication Declined
+                  Authentication Pending
               {% endif %}
               </div>
             </div>
