--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -1,5 +1,5 @@
 .auction-item {
-    height: 300px; 
+    height: 500px; 
     overflow: hidden; 
     display: flex; 
     flex-direction: column; 
@@ -41,4 +41,8 @@
     text-decoration: none;
     cursor: pointer;
     color: black;
+}
+
+.bid-info {
+    display: flex;
 }
