completed js validation
completed js validation

--- a/main/page_experts/templates/update_expert.html
+++ b/main/page_experts/templates/update_expert.html
@@ -3,9 +3,7 @@
 {% block title %}Expert Availability{% endblock %}
 
 {% block content %}
-
 <h1 class="mt-5 mb-4 text-center">Update Weekly Availability</h1>
-
 <div id="availability-form" class="container">
   <form action="" method="POST" name="ExpertAvailability">
     <table class="table table-bordered">
@@ -21,20 +19,20 @@
         {% for i in range(7) %}
           {% set current_day = week_start + timedelta(days=i) %}
           {% set availability = week_availabilities[current_day] %}
-          <tr>
+          <tr data-day="{{ current_day.strftime('%Y-%m-%d') }}">
             <td>{{ current_day.strftime('%A, %b %d') }}</td>
             <td>
-              <input type="time" class="form-control" name="day_{{ i }}_start"
+              <input type="time" class="form-control start-input" name="day_{{ i }}_start"
                      min="08:00" max="20:00"
                      value="{{ availability.start_time if availability else '' }}">
             </td>
             <td>
-              <input type="time" class="form-control" name="day_{{ i }}_end"
+              <input type="time" class="form-control end-input" name="day_{{ i }}_end"
                      min="08:00" max="20:00"
                      value="{{ availability.end_time if availability else '' }}">
             </td>
             <td>
-              <select name="day_{{ i }}_status" class="form-control">
+              <select name="day_{{ i }}_status" class="form-control status-select">
                 <option value="available" {% if availability and availability.status %}selected{% endif %}>Available</option>
                 <option value="unavailable" {% if availability and not availability.status %}selected{% endif %}>Unavailable</option>
               </select>
@@ -49,4 +47,5 @@
   </form>
 </div>
 
+<script src="{{ url_for('static', filename='js/timeValidation.js') }}"></script>
 {% endblock %}
