feat: added live countdowns to the homepage and made the entire div a clickable item link

--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -12,6 +12,7 @@
       <img src="{{ item.image }}" 
         alt="{{ item.title }}" 
         class="img-fluid rounded"
+        loading="lazy"
       >
       {% else %}
       <div class="bg-light rounded d-flex align-items-center justify-content-center" style="height: 400px">
