--- a/main/static/css/home-styles.css
+++ b/main/static/css/home-styles.css
@@ -1,48 +1,64 @@
 .auction-item {
-    height: 500px; 
-    overflow: hidden; 
-    display: flex; 
-    flex-direction: column; 
-    align-items: center; 
-    justify-content: center;
+  height: 500px; 
+  overflow: hidden; 
+  display: flex; 
+  flex-direction: column; 
+  align-items: center; 
+  justify-content: center;
 }
 
 .auction-image-container {
-    height: 75%;
-    width: 100%;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    margin-top: auto;
-    background-color: #f7f7f7;
+  height: 75%;
+  width: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin-top: auto;
+  background-color: #f7f7f7;
 }
 
 .auction-image { 
-    max-width: 100%; 
-    max-height: 100%;
-    height: auto;
+  max-width: 100%; 
+  max-height: 100%;
+  height: auto;
 }
 
 .auction-info {
-    height: 25%;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: left;
-    justify-content: left;
-    text-align: left;
-    margin-top: 10px;
-    margin-left: 10px;
+  height: 25%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: left;
+  text-align: left;
+  margin-top: 10px;
+  margin-left: 10px;
 }
 
 .auction-title {
-    text-decoration: none;
-    cursor: pointer;
-    color: black;
+  text-decoration: none;
+  cursor: pointer;
+  color: black;
 }
 
 .bid-info {
-    display: flex;
+  display: flex;
+}
+
+.countdown-active {
+  color: green;
+}
+
+.countdown-urgent {
+  color: red;
+  font-weight: bold;
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% { opacity: 1; }
+  50% { opacity: 0.7; }
+  100% { opacity: 1; }
 }
