--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -31,7 +31,7 @@
             {{ "Locked" if item.locked else "Open" }}
           </span>
           {% if is_allowed %}
-          <a href="{{ url_for('authenticate_item_page.index', url=item.url) }}"
+          <a href="{{ url_for('authenticate_item_page.index', url=item.authentication_requests[0].url) }}"
             title="View authentication request"
             class="badge mx-2 {% if item.authentication_requests[0].status == 1 %}bg-warning
             {% elif item.authentication_requests[0].status == 2 %}bg-success
